# LillyMol_6_cmake

./: .gitignore  README.md
docs/: dicer.md.bak
src/: CMakeLists.txt  Makefile  fix_includes.sh
src/Foundational/accumulator/: _resizable_array_p_accumulator_float.cc  accumulator_v2.h
src/Foundational/cmdline/: cmdline.cc
src/Foundational/cmdline_v2/: cmdline.cc
src/Foundational/iw_tdt/: _iw_tdt_iwstring.cc
src/Foundational/iwbits/: CMakeLists.txt  fixed_bit_vector.cc  fixed_size_counted_fingerprint.cc  hexbits.cc  iwbits.cc  iwbits.h  swap_byte_order.cc
src/Foundational/iwcrex/: CMakeLists.txt  _iwaray_grep25rx.cc  _iwgrep25regex.cc  iwcrex.h  iwgrep-2.5.cc  iwgrep-2.5.h
src/Foundational/iwmisc/: CMakeLists.txt  append_first_token_of_name.cc  fraction_as_string.cc  iwarchive.h  iwdigits.cc  iwdirname.cc  logical_expression.cc  logical_expression.h  minmaxspc.h  numeric_data_from_file.h  sparse_fp_creator.cc  sparse_fp_creator.h  sparse_fp_creator_support.cc  write_space_suppressed_string.cc
src/Foundational/iwstring/: iw_stl_hash_multiset.h  iwgetline.cc  iwstring_and_file_descriptor.cc  iwwrite_block.cc  iwzlib.cc  should_match.cc  tokenise.cc  unhtml.cc
src/Molecule_Lib/: CMakeLists.txt  ISIS_Atom_List.cc  _collection_template_float.cc  _collection_template_uint.cc  _iwaray_coords.cc  _iwaray_csubs.cc  _iwaray_ofsmtype.cc  _iwaray_p_rmele.cc  _iwaray_path_scoring.cc  _qry_wcharge.cc  _qry_wstats.cc  _resizable_array_bond.cc  _resizable_array_p_bond.cc  _resizable_array_p_ctb.cc  _resizable_array_p_fpc.cc  _resizable_array_p_mgroup.cc  _resizable_array_p_pthmsg.cc  _resizable_array_p_sms.cc  _resizable_array_path.cc  _resizable_array_subs.cc  _resizable_array_target.cc  _substructure.cc  aromatic.cc  aromatic.h  atom.cc  atom.h  atom_alias.cc  atom_alias.h  atom_typing.cc  careful_frag.cc  charge_assigner.cc  charge_assigner.h  charge_calculation.cc  charmm.cc  chiral.cc  chiral_centre.cc  chiral_centre.h  cif.cc  cis_trans_bond.cc  count_atoms_in_smiles.cc  (+93 more)
src/Molecule_Tools/: CMakeLists.txt  abraham.cc  activity_consistency.cc  comma_related_procedures.cc  common_names.cc  count_atoms_in_smiles.cc  dbf.cc  demerit.cc  dicer.cc  do_remove_duplicate_fragments.cc  extended_connectivity_fp.cc  extended_connectivity_fp.h  fileconv.cc  fix_structures.cc  hydrophobic_sections.cc  iwdemerit.cc  iwdescr.cc  iwecfp.cc  iwecfp_intermolecular.cc  iwfp.cc  iwmfingerprint.cc  iwmfingerprint.h  jw_sa_db_descriptor.cc  jw_vector_array_operation.h  known_fragment_data.cc  linear_path_fingerprint.cc  maccskeys_fn5.cc  maccskeys_fn5_main.cc  make_these_molecules.cc  mav2.cc  mol2qry.cc  molecular_scaffold.cc  molecular_transformations.cc  molecule_subset.cc  molecules_from_reagents.cc  msort.cc  nass.cc  nvrtspsa.cc  path_around_ring.cc  preferred_smiles.cc  (+44 more)
src/Utilities/GFP_Tools/: CMakeLists.txt  bsquared.cc  distance_scaling.cc  fixed_size_counted_fingerprint.h  fixed_size_counted_fingerprint_uchar.cc  fixed_size_counted_fingerprint_uint.cc  fp_and_smiles.cc  gfp_leader_standard.cc  gfp_nearneighbours.cc  gfp_nearneighbours_single_file.cc  gfp_profile_activity_by_bits.cc  gfp_spread_v2.cc  gfp_standard.cc  iwstats.cc  nn_leader_and_jp.cc  nplotnn.cc  smiles_id_dist.cc  sparsefp.cc  spread_v2.cc  tversky.cc
src/Utilities/General/: CMakeLists.txt  normalise.cc  tcount.cc  tokens_in_quoted_string.cc  whatsmissing.cc
